force-app/main/default/objects/Donations__c/Donations__c.object-meta.xml
<CustomObject>
    <label>Donations</label>
    <nameField>
        <displayFormat>{yy}{mm}-{000000}</displayFormat>
        <label>Donation No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>