force-app/main/default/objects/Donations__c/fields/Acquirer_Response_Message__c.field-meta.xml
<CustomField>
    <fullName>Acquirer_Response_Message__c</fullName>
    <label>Acquirer Response Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>