force-app/main/default/objects/Donations__c/fields/Address_Entered__c.field-meta.xml
<CustomField>
    <fullName>Address_Entered__c</fullName>
    <label>Address (Entered)</label>
    <type>TextArea</type>
</CustomField>