force-app/main/default/objects/Donations__c/fields/Address_Postal_Code_Entered__c.field-meta.xml
<CustomField>
    <fullName>Address_Postal_Code_Entered__c</fullName>
    <label>Address Postal Code (Entered)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>