force-app/main/default/objects/Donations__c/fields/Address_Unit_Entered__c.field-meta.xml
<CustomField>
    <fullName>Address_Unit_Entered__c</fullName>
    <label>Address Unit (Entered)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>