force-app/main/default/objects/Donations__c/fields/Alternate_Recognition_Name__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Recognition_Name__c</fullName>
    <label>Alternate Recognition Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>