force-app/main/default/objects/Donations__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <length>10</length>
    <type>Text</type>
</CustomField>