force-app/main/default/objects/Donations__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>Bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DBS</fullName>
            </value>
            <value>
                <fullName>POSB</fullName>
            </value>
            <value>
                <fullName>OCBC</fullName>
            </value>
            <value>
                <fullName>UOB</fullName>
            </value>
            <value>
                <fullName>Citibank</fullName>
            </value>
            <value>
                <fullName>Standard Chartered</fullName>
            </value>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>HSBC</fullName>
            </value>
            <value>
                <fullName>Maybank</fullName>
            </value>
            <value>
                <fullName>Bank of China</fullName>
            </value>
            <value>
                <fullName>Deutsche Bank</fullName>
            </value>
            <value>
                <fullName>Stanchart</fullName>
                <isActive>false</isActive>
                <label>Stanchart</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>