force-app/main/default/objects/Donations__c/fields/Bank_Account_no__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_no__c</fullName>
    <label>Bank Account no</label>
    <length>50</length>
    <type>Text</type>
</CustomField>