force-app/main/default/objects/Donations__c/fields/BankAccount__c.field-meta.xml
<CustomField>
    <fullName>BankAccount__c</fullName>
    <label>Bank Acount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CASH AT BANK - DBS A/C 1</fullName>
                <default>true</default>
                <label>CASH AT BANK - DBS A/C 1</label>
            </value>
            <value>
                <fullName>UOB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>