force-app/main/default/objects/Donations__c/fields/Card_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Card_Holder_Name__c</fullName>
    <label>Card Holder Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>