force-app/main/default/objects/Donations__c/fields/Cause_Support_Fee__c.field-meta.xml
<CustomField>
    <fullName>Cause_Support_Fee__c</fullName>
    <label>Cause Support Fee</label>
    <length>15</length>
    <type>Text</type>
</CustomField>