force-app/main/default/objects/Donations__c/fields/CC_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Exp_Date__c</fullName>
    <label>CC Exp Date</label>
    <type>Date</type>
</CustomField>