force-app/main/default/objects/Donations__c/fields/Cheque_No_Mode__c.field-meta.xml
<CustomField>
    <fullName>Cheque_No_Mode__c</fullName>
    <label>Cheque No/Mode.</label>
    <length>200</length>
    <type>Text</type>
</CustomField>