force-app/main/default/objects/Donations__c/fields/Cleared_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Cleared_Datetime__c</fullName>
    <label>Cleared Datetime</label>
    <type>DateTime</type>
</CustomField>