force-app/main/default/objects/Donations__c/fields/Collection_Method__c.field-meta.xml
<CustomField>
    <fullName>Collection_Method__c</fullName>
    <label>Collection Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Donation Box</fullName>
            </value>
            <value>
                <fullName>Street Collection</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>