force-app/main/default/objects/Donations__c/fields/Credit_Card_No__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_No__c</fullName>
    <label>Credit Card No.</label>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>