force-app/main/default/objects/Donations__c/fields/Credit_Card_Number_Plain__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Number_Plain__c</fullName>
    <label>Credit Card Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>