force-app/main/default/objects/Donations__c/fields/Dedication__c.field-meta.xml
<CustomField>
    <fullName>Dedication__c</fullName>
    <label>Dedication</label>
    <length>10</length>
    <type>Text</type>
</CustomField>