force-app/main/default/objects/Donations__c/fields/Dedication_Type__c.field-meta.xml
<CustomField>
    <fullName>Dedication_Type__c</fullName>
    <label>Dedication Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>