force-app/main/default/objects/Donations__c/fields/Deposit_to__c.field-meta.xml
<CustomField>
    <fullName>Deposit_to__c</fullName>
    <label>Deposit to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DBS</fullName>
                <default>true</default>
                <label>DBS</label>
            </value>
            <value>
                <fullName>UOB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>