force-app/main/default/objects/Donations__c/fields/Description_of_Item__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Item__c</fullName>
    <label>Description of Item</label>
    <length>200</length>
    <type>Text</type>
</CustomField>