force-app/main/default/objects/Donations__c/fields/Designated_Charity_Name__c.field-meta.xml
<CustomField>
    <fullName>Designated_Charity_Name__c</fullName>
    <label>Designated Charity Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>