force-app/main/default/objects/Donations__c/fields/Disbursement_Batch_Date__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Batch_Date__c</fullName>
    <label>Disbursement Batch Date</label>
    <type>Date</type>
</CustomField>