force-app/main/default/objects/Donations__c/fields/Disbursement_Batch_No__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Batch_No__c</fullName>
    <label>Disbursement Batch No.</label>
    <length>80</length>
    <type>Text</type>
</CustomField>