force-app/main/default/objects/Donations__c/fields/Discrepancy__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whenever there is a discrepancy in the contact record with the submitted donation record this checkbox is positive.</inlineHelpText>
    <label>Discrepancy</label>
    <type>Checkbox</type>
</CustomField>