force-app/main/default/objects/Donations__c/fields/Donation_Category__c.field-meta.xml
<CustomField>
    <fullName>Donation_Category__c</fullName>
    <label>Donation Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outright</fullName>
                <default>true</default>
                <label>Outright</label>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Outright Cash</fullName>
                <isActive>false</isActive>
                <label>Outright Cash</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>