force-app/main/default/objects/Donations__c/fields/Donation_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Donation_Datetime__c</fullName>
    <label>Donation Datetime</label>
    <type>DateTime</type>
</CustomField>