force-app/main/default/objects/Donations__c/fields/Donation_Ref__c.field-meta.xml
<CustomField>
    <fullName>Donation_Ref__c</fullName>
    <label>Donation Ref</label>
    <length>10</length>
    <type>Text</type>
</CustomField>