force-app/main/default/objects/Donations__c/fields/Donation_Status__c.field-meta.xml
<CustomField>
    <fullName>Donation_Status__c</fullName>
    <defaultValue>&apos;Pending&apos;</defaultValue>
    <label>Donation Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Payment_Method__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Cheque Returned</fullName>
            </value>
            <value>
                <fullName>Giro Rejected</fullName>
            </value>
            <value>
                <fullName>CC Declined</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>