force-app/main/default/objects/Donations__c/fields/Donation_Type__c.field-meta.xml
<CustomField>
    <fullName>Donation_Type__c</fullName>
    <label>Donation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outright Cash</fullName>
                <default>true</default>
                <label>Outright Cash</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>