force-app/main/default/objects/Donations__c/fields/Donor_Account__c.field-meta.xml
<CustomField>
    <fullName>Donor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Will be filled by trigger</description>
    <inlineHelpText>Don&apos;t need to be manually filled, will be automatically overwritten by trigger,</inlineHelpText>
    <label>Donor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>Donations</relationshipName>
    <type>Lookup</type>
</CustomField>