force-app/main/default/objects/Donations__c/fields/Donor_Address__c.field-meta.xml
<CustomField>
    <fullName>Donor_Address__c</fullName>
    <label>Donor Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>