force-app/main/default/objects/Donations__c/fields/Donor_City__c.field-meta.xml
<CustomField>
    <fullName>Donor_City__c</fullName>
    <label>Donor City</label>
    <length>10</length>
    <type>Text</type>
</CustomField>