force-app/main/default/objects/Donations__c/fields/Donor_Country__c.field-meta.xml
<CustomField>
    <fullName>Donor_Country__c</fullName>
    <label>Donor Country</label>
    <length>15</length>
    <type>Text</type>
</CustomField>