force-app/main/default/objects/Donations__c/fields/Donor_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Full_Name__c</fullName>
    <label>Donor Full Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>