force-app/main/default/objects/Donations__c/fields/Donor_Id__c.field-meta.xml
<CustomField>
    <fullName>Donor_Id__c</fullName>
    <label>Donor ID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>