force-app/main/default/objects/Donations__c/fields/Donor_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the person who made the donation and paid for it</description>
    <label>Donor Name</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Donor_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>Donation</relationshipName>
    <type>Lookup</type>
</CustomField>