force-app/main/default/objects/Donations__c/fields/Donor_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Donor_Postal_Code__c</fullName>
    <label>Donor Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>