force-app/main/default/objects/Donations__c/fields/Donor_Province__c.field-meta.xml
<CustomField>
    <fullName>Donor_Province__c</fullName>
    <label>Donor Province</label>
    <length>10</length>
    <type>Text</type>
</CustomField>