force-app/main/default/objects/Donations__c/fields/Electronic_Receipt_Sent__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Receipt_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electronic Receipt Sent</label>
    <type>Checkbox</type>
</CustomField>