force-app/main/default/objects/Donations__c/fields/Email_Entered__c.field-meta.xml
<CustomField>
    <fullName>Email_Entered__c</fullName>
    <label>Email (Entered)</label>
    <type>Email</type>
</CustomField>