force-app/main/default/objects/Donations__c/fields/Fee_Comment__c.field-meta.xml
<CustomField>
    <fullName>Fee_Comment__c</fullName>
    <label>Fee Comment</label>
    <length>10</length>
    <type>Text</type>
</CustomField>