force-app/main/default/objects/Donations__c/fields/Foreign_Currency_Amount__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Currency_Amount__c</fullName>
    <label>Foreign Currency Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>