force-app/main/default/objects/Donations__c/fields/Foreign_Currency_Type__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Currency_Type__c</fullName>
    <label>Foreign Currency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>