force-app/main/default/objects/Donations__c/fields/Frequency_Period__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Period__c</fullName>
    <formula>Text(Recurring_Donation__r.Frequency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frequency Period</label>
    <type>Text</type>
</CustomField>