force-app/main/default/objects/Donations__c/fields/Frequency_Type__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Type__c</fullName>
    <defaultValue>&quot;One-time&quot;</defaultValue>
    <label>Frequency Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-time</fullName>
                <default>true</default>
                <label>One-time</label>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>