force-app/main/default/objects/Donations__c/fields/Full_Name_Entered__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_Entered__c</fullName>
    <label>Full Name (Entered)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>