force-app/main/default/objects/Donations__c/fields/Id_No__c.field-meta.xml
<CustomField>
    <fullName>Id_No__c</fullName>
    <formula>Donor_Name__r.ID_No__c</formula>
    <label>Donor Id No</label>
    <type>Text</type>
</CustomField>