force-app/main/default/objects/Donations__c/fields/ID_No_Entered__c.field-meta.xml
<CustomField>
    <fullName>ID_No_Entered__c</fullName>
    <label>Donor ID No. (Entered)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>