force-app/main/default/objects/Donations__c/fields/ID_Type__c.field-meta.xml
<CustomField>
    <fullName>ID_Type__c</fullName>
    <formula>Text(  Donor_Name__r.ID_Type__c )</formula>
    <label>Donor Id Type</label>
    <type>Text</type>
</CustomField>