force-app/main/default/objects/Donations__c/fields/ID_Type_Entered__c.field-meta.xml
<CustomField>
    <fullName>ID_Type_Entered__c</fullName>
    <label>Tax Recipient Id Type (Entered)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASGD</fullName>
            </value>
            <value>
                <fullName>FIN</fullName>
            </value>
            <value>
                <fullName>ITR</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>NRIC</fullName>
            </value>
            <value>
                <fullName>OTHERS</fullName>
            </value>
            <value>
                <fullName>UEN</fullName>
            </value>
            <value>
                <fullName>UEN-Business</fullName>
            </value>
            <value>
                <fullName>UEN-Local Company</fullName>
            </value>
            <value>
                <fullName>UEN-Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>