force-app/main/default/objects/Donations__c/fields/Is_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>Is_Disbursed__c</fullName>
    <label>Is Disbursed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>false</fullName>
                <default>true</default>
                <label>false</label>
            </value>
            <value>
                <fullName>true</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>