force-app/main/default/objects/Donations__c/fields/is_RD_Generated__c.field-meta.xml
<CustomField>
    <fullName>is_RD_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to mark if this Donation is generated by RD
Intentionally not displayed on any page layout</description>
    <label>is RD Generated</label>
    <type>Checkbox</type>
</CustomField>