force-app/main/default/objects/Donations__c/fields/Local_Currency_Receipt_Amount__c.field-meta.xml
<CustomField>
    <fullName>Local_Currency_Receipt_Amount__c</fullName>
    <label>Local Currency Receipt Amount</label>
    <length>15</length>
    <type>Text</type>
</CustomField>