force-app/main/default/objects/Donations__c/fields/Local_Currency_Type__c.field-meta.xml
<CustomField>
    <fullName>Local_Currency_Type__c</fullName>
    <label>Local Currency Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>