force-app/main/default/objects/Donations__c/fields/Main_Category__c.field-meta.xml
<CustomField>
    <fullName>Main_Category__c</fullName>
    <label>Main Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>Apparels</fullName>
            </value>
            <value>
                <fullName>Liquors</fullName>
            </value>
            <value>
                <fullName>Toiletries</fullName>
            </value>
            <value>
                <fullName>Beauty Products</fullName>
            </value>
            <value>
                <fullName>Consumables</fullName>
            </value>
            <value>
                <fullName>Vocuhers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>