force-app/main/default/objects/Donations__c/fields/Market_Value_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Market_Value_Per_Unit__c</fullName>
    <label>Market Value (Per Unit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>