force-app/main/default/objects/Donations__c/fields/Match_Amount__c.field-meta.xml
<CustomField>
    <fullName>Match_Amount__c</fullName>
    <label>Match Amount</label>
    <length>10</length>
    <type>Text</type>
</CustomField>