force-app/main/default/objects/Donations__c/fields/Match_Donor_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Match_Donor_First_Name__c</fullName>
    <label>Match Donor First Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>