force-app/main/default/objects/Donations__c/fields/Match_Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>Match_Donor_ID__c</fullName>
    <label>Match Donor ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>