force-app/main/default/objects/Donations__c/fields/Merchant_Fee__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Fee__c</fullName>
    <label>Merchant Fee</label>
    <length>15</length>
    <type>Text</type>
</CustomField>