force-app/main/default/objects/Donations__c/fields/Min_Tdr__c.field-meta.xml
<CustomField>
    <fullName>Min_Tdr__c</fullName>
    <label>Min Tdr.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>