force-app/main/default/objects/Donations__c/fields/Nric_Fin__c.field-meta.xml
<CustomField>
    <fullName>Nric_Fin__c</fullName>
    <label>Nric/Fin</label>
    <length>10</length>
    <type>Text</type>
</CustomField>