force-app/main/default/objects/Donations__c/fields/Old_Tax_Receipt_No__c.field-meta.xml
<CustomField>
    <fullName>Old_Tax_Receipt_No__c</fullName>
    <description>This field is used to record the old tax receipt no that was caused by duplication prior to May 2022 update</description>
    <label>(Old) Tax Receipt No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>