force-app/main/default/objects/Donations__c/fields/Organisation_Name_Entered__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Name_Entered__c</fullName>
    <label>Organisation Name (Entered)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>