force-app/main/default/objects/Donations__c/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <label>Others</label>
    <length>200</length>
    <type>Text</type>
</CustomField>