force-app/main/default/objects/Donations__c/fields/Payment_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Create_Date__c</fullName>
    <label>Payment Create Date</label>
    <type>Date</type>
</CustomField>