force-app/main/default/objects/Donations__c/fields/Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>Payment_ID__c</fullName>
    <label>Payment ID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>