force-app/main/default/objects/Donations__c/fields/Payment_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status_Date__c</fullName>
    <label>Payment Status Date</label>
    <type>Date</type>
</CustomField>