force-app/main/default/objects/Donations__c/fields/Print_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Print_Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Print Receipt</label>
    <type>Checkbox</type>
</CustomField>