force-app/main/default/objects/Donations__c/fields/Programme_Event__c.field-meta.xml
<CustomField>
    <fullName>Programme_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programme/ Event</label>
    <referenceTo>Programme_Events__c</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>Donations</relationshipName>
    <type>Lookup</type>
</CustomField>