force-app/main/default/objects/Donations__c/fields/Reason_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Cancellation__c</fullName>
    <label>Reason for Cancellation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>