force-app/main/default/objects/Donations__c/fields/Receipt_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Serial_No__c</fullName>
    <label>Receipt Serial No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>