force-app/main/default/objects/Donations__c/fields/Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Received_Amount__c</fullName>
    <label>Received Amount</label>
    <length>15</length>
    <type>Text</type>
</CustomField>