force-app/main/default/objects/Donations__c/fields/Recurring_Donation__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Donation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurring Donation</label>
    <referenceTo>Recurring_Donation__c</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>Donations</relationshipName>
    <type>Lookup</type>
</CustomField>