force-app/main/default/objects/Donations__c/fields/Referral_Name__c.field-meta.xml
<CustomField>
    <fullName>Referral_Name__c</fullName>
    <formula>Volunteer_Name__r.Contact_Name__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Name</label>
    <type>Text</type>
</CustomField>